--- a/bootstrap-vars.scss
+++ b/bootstrap-vars.scss
@@ -5,14 +5,15 @@ $grid-breakpoints: (
   sm: 576px,
   md: 768px,
   lg: 992px,
-  xl: 1200px,
-  xxl: 1590px
-)
+  xl: 1200px
+);
 
 $container-max-widths: (
   sm: 540px,
   md: 720px,
   lg: 960px,
-  xl: 1140px,
-  xxl: 1540px
-)
+  xl: 1140px
+);
+
+//$grid-gutter-width-base: 30px;
+$grid-gutter-width: 2rem;
